[build-system]
requires = ["hatchling", "django"]
build-backend = "hatchling.build"

[project]
name = "django_auth0_engine"
version = "1.4"
authors = [
  { name="_resun", email="resun.saif@gmail.com" },
]
description = "A simple Auth0 based Django Authentication Backend."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/resun-c/django-auth0-engine"
Issues = "https://github.com/resun-c/django-auth0-engine/issues"